--- a/src/app/billing/billing-step3/billing-hybrid-step3/billing-hybrid-step3.component.scss
+++ b/src/app/billing/billing-step3/billing-hybrid-step3/billing-hybrid-step3.component.scss
@@ -224,6 +224,12 @@
   .data-info {
     width: 81% !important;
   }
+  .textBody {
+    margin-left: 134px !important;
+  }
+  .mobileImg {
+    background-position-x: 122px !important;
+  }
 }
 @media (min-width: 768px) {
   .col-md-12 {
@@ -319,7 +325,7 @@
   position: absolute;
   top: 100px;
   width: 54%;
-  margin-left: 75px;
+  margin-left: 73px;
   label {
     font-size: 10px !important;
     color: #000000;
@@ -329,13 +335,13 @@
   height: 14px;
 }
 .data-info {
-  margin-left: 7px;
+  margin: 0px -2px 0px 10px;
   border: black;
   border-width: 2px;
   box-shadow: 0px 0.652639px 7.83167px rgba(0, 0, 0, 0.1);
 }
 .data-info {
-  padding: 6px 0px;
+  padding: 6px 0px 0px 0px;
   table {
     width: 100%;
     position: relative;
