--- a/src/app/billing/billing-step3/billing-recurring-step3/billing-recurring-step3.component.scss
+++ b/src/app/billing/billing-step3/billing-recurring-step3/billing-recurring-step3.component.scss
@@ -217,7 +217,7 @@ input.is-invalid {
     }
   }
   .dynamicData {
-    width: 87% !important;
+    width: 84% !important;
   }
   .dynamicData2 {
     width: 87% !important;
@@ -227,6 +227,12 @@ input.is-invalid {
   }
   .data-info {
     width: 81% !important;
+  }
+  .mobileImg {
+    background-position-x: 119px !important;
+  }
+  .textBody {
+    margin-left: 133px !important;
   }
 }
 .SingleRecurringClass input.col-md-11 {
@@ -336,13 +342,13 @@ input.is-invalid {
   height: 20px;
 }
 .data-info {
-  margin-left: 7px;
+  margin: 0px 0px 0px 8px;
   border: black;
   border-width: 2px;
   box-shadow: 0px 0.652639px 7.83167px rgba(0, 0, 0, 0.1);
 }
 .data-info {
-  padding: 6px 0px;
+  padding: 6px 0px 0px 0px;
   table {
     width: 100%;
     position: relative;
