--- a/src/app/billing/billing-step3/billing-step3.component.scss
+++ b/src/app/billing/billing-step3/billing-step3.component.scss
@@ -190,13 +190,13 @@
   height: 20px;
 }
 .data-info {
-  margin-left: 7px;
+  margin: 0px -2px 0px 10px;
   border: black;
   border-width: 2px;
   box-shadow: 0px 0.652639px 7.83167px rgba(0, 0, 0, 0.1);
 }
 .data-info {
-  padding: 6px 0px;
+  padding: 6px 0px 0px 0px;
   table {
     width: 100%;
     position: relative;
